# python-typer-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TEMPLATE_CONTRIBUTING.md  TEMPLATE_Makefile  TEMPLATE_README.md  USAGE.md  pyproject.toml
.github/: CODEOWNERS  README.md  SETUP.md  setup-branch-protection.sh
.github/workflows/: ci.yml  initialize-repository.yml
my_package/: main.py
my_package/commands/: greet.py  hello.py  mail.py
my_package/common/: cli_utils.py  logger_utils.py
my_package/models/: mail.py
template_package/: main.py
template_package/commands/: hello.py  mail.py
template_package/common/: cli_utils.py
template_package/models/: language.py
templates/: TEMPLATE_CONTRIBUTING.md  TEMPLATE_Makefile  TEMPLATE_README.md
tests/: test_greet.py  test_hello.py  test_mail.py  test_services.py
